--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,30 +1,59 @@
 .car img {
   width: 100%;
 }
-.buy-btn {
+
+
+
+/* CSS */
+.animated-button {
+  align-items: center;
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+  font-size: 20px;
+  justify-content: center;
+  text-align: center;
+  line-height: 1em;
+  max-width: 30%;
+  min-width: 140px;
+  padding: 3px;
   text-decoration: none;
-  background: #222f3e;
-  padding: 10px 20px;
-  margin: 20px;
-  font-size: 1.3rem;
-  font-weight: bold;
-  font-style: italic;
-  border: 1px solid #b53471;
-  border-radius: 15px;
-  color: #fda7df;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+  
 }
-.left-side {
-  color: #fda7df;
+
+.animated-button:active,
+.animated-button:hover {
+  outline: 0;
+  color: #FFFFFF;
 }
-.reviewBtn {
-  text-decoration: none;
-  background: #222f3e;
-  padding: 10px 20px;
-  margin: 20px;
-  font-size: 1.3rem;
-  font-weight: bold;
-  font-style: italic;
-  border: 1px solid #b53471;
-  border-radius: 15px;
-  color: #fda7df;
+
+.animated-button span {
+  background-color: rgb(5, 6, 45);
+  padding: 16px 24px;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  transition: 300ms;
 }
+
+.animated-button:hover span {
+  background: none;
+}
+
+@media (min-width: 768px) {
+  .animated-button {
+    font-size: 24px;
+    min-width: 196px;
+  }
+}
+
+
